--- a/projects/prj1/README
+++ b/projects/prj1/README
@@ -1,5 +1,3 @@
-Name:		XXX
-B-Number:	XXX
-Email:		XXX
-
-Add text here as needed.
+Name:		Sai Milind Tammisetti
+B-Number:	B00764346
+Email:		stammis1@binghamton.edu
