--- a/projects/prj1/README
+++ b/projects/prj1/README
@@ -1,3 +1,4 @@
-Name:		Sai Milind Tammisetti
-B-Number:	B00764346
-Email:		stammis1@binghamton.edu
+# CS544: Assignment 1
+## Name:		Sai Milind Tammisetti
+## B-Number:	B00764346
+## Email:		stammis1@binghamton.edu
