--- a/projects/prj1/submit/README
+++ b/projects/prj1/submit/README
@@ -1,3 +1,5 @@
 Name:		Sai Milind Tammisetti
 B-Number:	B00764346
 Email:		stammis1@binghamton.edu
+
+The github repository name has been changed from CS544-Assignment1 to CS544 hence in the screenshot you'll be seeing the directory name as CS544-Assignment1.
